<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context="com.example.ambar.todoapp2.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:drawableLeft="@drawable/login1"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/login1"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/email"
            android:layout_marginTop="39dp"
            android:drawableLeft="@drawable/key2"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/key2"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signin"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signin"
            android:layout_marginTop="20dp"
            android:id="@+id/signup"
            android:layout_centerHorizontal="true"
            android:text="Not Registered yet?Register Now!"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_bright"
            />

    </RelativeLayout>
</ScrollView>